Refactor and small UI improvements